tests/stable/misc/compile_fail/ambiguous_assure.stderr
error: could not find an unambiguos call to apply this to

  = help: try moving it closer to the call it should apply to

  --> $DIR/ambiguous_assure.rs:15:6
   |
15 |     #[assure("baz", reason = "is baz")]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/ambiguous_assure.rs:16:5
   |
16 |     foo()[bar()];
   |     ^^^-- supplied 0 arguments
   |     |
   |     expected 1 argument
   |
note: function defined here
  --> $DIR/ambiguous_assure.rs:4:4
   |
3  |   #[pre("baz")]
   |  _______-
4  | | fn foo() -> [u8; 8] {
   | |____^^-

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/ambiguous_assure.rs:16:11
   |
16 |     foo()[bar()];
   |           ^^^-- supplied 0 arguments
   |           |
   |           expected 1 argument
   |
note: function defined here
  --> $DIR/ambiguous_assure.rs:9:4
   |
8  |   #[pre("baz")]
   |  _______-
9  | | fn bar() -> usize {
   | |____^^-
